--- a/U2 ACTUADORES.html
+++ b/U2 ACTUADORES.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Sistemas Eléctricos, Mecánicos e Hidráulicos</title>
     <meta name="description" content="Presentación sobre sistemas eléctricos, mecánicos e hidráulicos">
-    <meta name="author" content="Tu Nombre">
+    <meta name="author" content="Sánchez Zetina Jhordy">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link rel="stylesheet" href="css/reveal.css">
